<resources>
    <string name="app_name"> </string>
    <string name="calc_text">153276</string>
    <string name="ac">AC</string>
    <string name="negpos">+/-</string>
    <string name="percentage">%</string>
    <string name="divider">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">X</string>
    <string name="four">4</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="delete">DEL</string>
</resources>