<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgColor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtInput"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@color/panelColor"
        android:padding="10dp"
        android:textSize="48sp"
        android:textColor="@color/white"
        android:gravity="end|bottom"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
    <Button
        android:backgroundTint="@color/panelColor"
        android:layout_margin="5dp"
        android:id="@+id/btnClear"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:textSize="20sp"
        android:layout_weight="1"
        android:textColor="@color/operatorColor"
        android:text="@string/ac"/>
        <Button
            android:backgroundTint="@color/panelColor"
            android:layout_margin="5dp"
            android:id="@+id/btnNegative"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/operatorColor"
            android:text="@string/negpos"/>
        <Button
            android:backgroundTint="@color/panelColor"
            android:layout_margin="5dp"
            android:id="@+id/btnPercentage"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/operatorColor"
            android:text="@string/percentage"/>
        <Button
            android:backgroundTint="@color/panelColor"
            android:layout_margin="5dp"
            android:id="@+id/btnDivide"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/operatorColor2"
            android:text="@string/divider"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:backgroundTint="@color/panelColor"
            android:layout_margin="5dp"
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/seven"/>
        <Button
            android:backgroundTint="@color/panelColor"
            android:layout_margin="5dp"
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/eight"/>
        <Button
            android:backgroundTint="@color/panelColor"
            android:layout_margin="5dp"
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/nine"/>
        <Button
            android:backgroundTint="@color/panelColor"
            android:layout_margin="5dp"
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/operatorColor2"
            android:text="@string/multiply"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:backgroundTint="@color/panelColor"
            android:layout_margin="5dp"
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/four"/>
        <Button
            android:backgroundTint="@color/panelColor"
            android:layout_margin="5dp"
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/five"/>
        <Button
            android:backgroundTint="@color/panelColor"
            android:layout_margin="5dp"
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/six"/>
        <Button
            android:backgroundTint="@color/panelColor"
            android:layout_margin="5dp"
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/operatorColor2"
            android:text="@string/minus"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:backgroundTint="@color/panelColor"
            android:layout_margin="5dp"
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/one"/>
        <Button
            android:backgroundTint="@color/panelColor"
            android:layout_margin="5dp"
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/two"/>
        <Button
            android:backgroundTint="@color/panelColor"
            android:layout_margin="5dp"
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/three"/>
        <Button
            android:backgroundTint="@color/panelColor"
            android:layout_margin="5dp"
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/operatorColor2"
            android:text="@string/plus"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:backgroundTint="@color/panelColor"
            android:layout_margin="5dp"
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/delete"/>
        <Button
            android:backgroundTint="@color/panelColor"
            android:layout_margin="5dp"
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/zero"/>
        <Button
            android:backgroundTint="@color/panelColor"
            android:layout_margin="5dp"
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/dot"/>
        <Button
            android:backgroundTint="@color/panelColor"
            android:layout_margin="5dp"
            android:id="@+id/btnEquals"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/operatorColor2"
            android:text="@string/equals"/>
    </LinearLayout>


    </LinearLayout>